--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.0",
+    "vue-moment": "^4.1.0",
+    "vue-preview": "^1.1.3",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.5",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.6",
